--- a/UpdateIPAddresses/UpdateIPAddresses.csproj
+++ b/UpdateIPAddresses/UpdateIPAddresses.csproj
@@ -1,13 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DomRobot\DomRobot.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="DotNetEnv" Version="2.1.1" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-      <PackageReference Include="Otp.NET" Version="1.2.2" />
     </ItemGroup>
 
 </Project>
